@@ -1,3 +1,12 @@
+2007-01-29  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* gnome-theme-details.c: (update_color_scheme_tab), (remove_theme),
+	(gnome_theme_details_init):
+	* gnome-theme-installer.c: (extract_files_error_dialog):
+	* gnome-theme-manager.c: (get_lockdown_status):
+	Fix compiler warnings. Correct order of args to a gnome_vfs_xfer
+	function.
+
 2007-01-26  Thomas Wood  <thos@gnome.org>
 
 	Patch by: Alberto Ruiz <aruiz@synaptia.net>
